--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
         <div>
          
             <b>Choose your gender :</b>
-            <input type="radio" id="mail" value="mail">
-            <label for="mail">Mail</label>
-            <input type="radio" id="femail" value="femail">
-            <label for="femail">Femail</label>
+            <input type="radio" id="male" value="male">
+            <label for="male">Male</label>
+            <input type="radio" id="female" value="female">
+            <label for="female">Female</label>
 
 
         </div>
