--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <img src="image.jpg" alt="A photo of me">
     
-        <p>Creative and detail-oriented Web/UI Designer with a foundation in front-end development and strong skills in user interface design. Passionate about creating intuitive and visually appealing ditital experiences using modren tools and technologies</p>
+        <p>Creative and detail-oriented Web/UI Designer with a foundation in front-end development <br> and strong skills in user interface design.<br> Passionate about creating intuitive and visually appealing ditital experiences using<br> modren tools and technologies</p>
         <p>Graduated from Sree Vidyanikethan Engineerging College with Btech in Electronics and instrumentation</em> Tirupati. </p>
         <p>I have completed my Diploma in <em>Smt.B.Seetha Polytechnic</em> Bhimavaram.</p>
         <p>I have learnt  Web Development from Online platform.
